[FIX] Created a Collapse component + Fixing the key prop + fixing the slideshow number on mobile

--- a/Kasa/src/styles.scss
+++ b/Kasa/src/styles.scss
@@ -145,7 +145,7 @@ body {
     background-color: #f6f6f6;
     border-radius: 25px;
     display: flex;
-    
+    justify-content: center;
     margin: auto;
   }
   
@@ -771,6 +771,7 @@ li {
   .locations-grid {
     width: 335px;
     background-color: white;
+    display: block;
   }
 
   .loc {
@@ -845,6 +846,10 @@ li {
     width: 335px;
     height: 255px;
     border-radius: 10px;
+  }
+
+  .image-number {
+    display: none;
   }
 
   .author-img {
